[project]
name = "python-invioce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.19.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
